--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-grid>
+  <ion-grid *ngIf="(auth.user | async) as userLogged">
     <ion-row>
     <ion-col size="3" *ngIf="mostrarFiltro">
       <ion-col>
@@ -116,7 +116,7 @@
             "
           >
             <h2 class="ion-margin-top ion-margin-bottom ion-margin-end">
-              {{titulo}}
+              {{getTitulo(userLogged)}}
             </h2>
             <ion-fab-button [routerLink]="['nuevo']" size="small">
               <ion-icon name="add"></ion-icon>
@@ -140,62 +140,113 @@
           </ion-row>
 
           <ion-row class="ion-hide-md-down">
-            <ion-col size="6">Usuario</ion-col>
+            <ion-col size="6">{{rolificador.getNombreUsuarios(userLogged.role_id)}}</ion-col>
             <!-- <ion-col size="2">Email</ion-col> -->
-            <ion-col size="2">Rol</ion-col>
-            <ion-col size="2">Entidad</ion-col>
+            <ion-col size="2"><ion-text *ngIf="rolificador.isAdmin(userLogged)">Rol</ion-text></ion-col>
+            <ion-col size="2"><ion-text *ngIf="rolificador.isAdmin(userLogged)">Entidad</ion-text></ion-col>
             <ion-col size="2">Acciones</ion-col>
           </ion-row>
         </ion-grid>
 
-        <ion-list *ngIf="usuariosFiltrados.length > 0; else texto">
-          <ion-item *ngFor="let u of usuariosFiltrados">
-            <ion-grid>
-              <ion-row size="12">
-                <ion-col size="12" size-md="6">
-                  <ion-row
-                    class="ion-align-items-center ion-justify-content-between"
-                  >
-                    <!-- <ion-item lines="none"> -->
-                    <!-- <ion-row class="ion-justify-content-between"> -->
-                      <!-- class="ion-float-left ion-margin-end" -->
+        <!-- <div *ngIf="(users | async) as usuarios"> -->
+        <div *ngIf="(miembros | async) as miembros">
+          <ion-list *ngIf="miembros.length > 0; else texto">
+            <ion-item *ngFor="let m of miembros">
+              <ion-grid>
+                <ion-row size="12">
+                  <ion-col size="12" size-md="6">
+                    <ion-row
+                      class="ion-align-items-center ion-justify-content-between"
+                    > <!-- user card -->
                       <ion-col size="3" size-md="2">
-                        <app-usuario-img [src]="u.img_url"></app-usuario-img>
-
+                        <app-usuario-img [src]="m.img_url"></app-usuario-img>
                       </ion-col>
                       <ion-col size-md="10">
-                        <!-- class="ion-float-left"> -->
                         <ion-label class="ion-margin-start">
-                          <ion-card-subtitle title="Username">{{u.username}}</ion-card-subtitle>
-                          <ion-text title="Nombre"
-                            ><b>{{getFullName(u.profile_id)}}</b></ion-text
-                          >
-                          <!-- <ion-card-subtitle title="e-mail"
-                            ><a [href]="'mailto:'+u.email">
-                              {{ u.email }}
-                            </a></ion-card-subtitle
-                          > -->
-                          <!-- <ion-card-subtitle title="DNI">DNI {{u.dni}}</ion-card-subtitle> -->
+                          <ion-card-subtitle title="Username">{{m.user.username}}</ion-card-subtitle>
+                          <ion-text title="Nombre">
+                            <b>{{m.name}} {{m.last_name}}</b>
+                          </ion-text>
                         </ion-label>
-
                       </ion-col>
-
-                    <!-- </ion-row> -->
-                    <!-- </ion-item> -->
-                    <ion-buttons class="ion-hide-md-up">
-                      <ion-button (click)="mostrarAcciones($event, u.id)">
-                        <ion-icon
-                          slot="icon-only"
-                          ios="ellipsis-horizontal"
-                          md="ellipsis-vertical"
-                        ></ion-icon>
+                      <ion-buttons class="ion-hide-md-up">
+                        <ion-button (click)="mostrarAcciones($event, m.user.id)">
+                          <ion-icon
+                            slot="icon-only"
+                            ios="ellipsis-horizontal"
+                            md="ellipsis-vertical"
+                          ></ion-icon>
+                        </ion-button>
+                      </ion-buttons>
+                    </ion-row>
+                  </ion-col>
+                  <ion-col
+                    size="2"
+                    class="ion-hide-md-down ion-align-self-center"
+                  >
+                    <ion-text *ngIf="rolificador.isAdmin(userLogged)">{{ getRoleType(m.user.role_id) }}</ion-text>
+                  </ion-col>
+                  <ion-col
+                    size="2"
+                    class="ion-hide-md-down ion-align-self-center"
+                  >
+                    <ion-text *ngIf="rolificador.isAdmin(userLogged)">{{  getFotoclubName(m.fotoclub_id) }}</ion-text>
+                  </ion-col>
+                  <ion-col
+                    size="2"
+                    class="ion-align-self-center ion-hide-md-down"
+                  >
+                    <ion-buttons>
+                      <ion-button [routerLink]="['editar/' + m.user.id]">
+                        <ion-icon name="create"></ion-icon>
+                      </ion-button>
+                      <ion-button (click)="deleteUsuario(m.user.id)">
+                        <ion-icon name="trash"></ion-icon>
                       </ion-button>
                     </ion-buttons>
-                  </ion-row>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
 
-                  <!-- </ion-col>
-                    <ion-col size="2" class="ion-hide-md-up"> -->
-                  <!-- <ion-buttons>
+            </ion-item>
+          </ion-list>
+        </div>
+        <ng-template #comentado>
+          <ion-list *ngIf="usuariosFiltrados.length > 0; else texto">
+            <ion-item *ngFor="let u of usuariosFiltrados">
+              <ion-grid>
+                <ion-row size="12">
+                  <ion-col size="12" size-md="6">
+                    <ion-row
+                      class="ion-align-items-center ion-justify-content-between"
+                    >
+                      <!-- <ion-item lines="none"> -->
+                      <!-- <ion-row class="ion-justify-content-between"> -->
+                        <!-- class="ion-float-left ion-margin-end" -->
+                        <ion-col size="3" size-md="2">
+                          <app-usuario-img [src]="u.img_url"></app-usuario-img>
+  
+                        </ion-col>
+                        <ion-col size-md="10">
+                          <!-- class="ion-float-left"> -->
+                          <ion-label class="ion-margin-start">
+                            <ion-card-subtitle title="Username">{{u.username}}</ion-card-subtitle>
+                            <ion-text title="Nombre"
+                              ><b>{{getFullName(u.profile_id)}}</b></ion-text
+                            >
+                            <!-- <ion-card-subtitle title="e-mail"
+                              ><a [href]="'mailto:'+u.email">
+                                {{ u.email }}
+                              </a></ion-card-subtitle
+                            > -->
+                            <!-- <ion-card-subtitle title="DNI">DNI {{u.dni}}</ion-card-subtitle> -->
+                          </ion-label>
+  
+                        </ion-col>
+  
+                      <!-- </ion-row> -->
+                      <!-- </ion-item> -->
+                      <ion-buttons class="ion-hide-md-up">
                         <ion-button (click)="mostrarAcciones($event, u.id)">
                           <ion-icon
                             slot="icon-only"
@@ -203,73 +254,49 @@
                             md="ellipsis-vertical"
                           ></ion-icon>
                         </ion-button>
-                      </ion-buttons> -->
-                  <!-- </ion-col>
-                  </ion-row> -->
-
-                  <!-- <ion-item lines="none">
-                    <app-usuario-img
-                      class="ion-float-left ion-margin-end"
-                      [src]="u.img_url"
-                    ></app-usuario-img>
-
-                    <ion-label class="ion-float-left">
-                      <ion-card-subtitle>{{u.username}}</ion-card-subtitle>
-                      <ion-text><b>{{u.name + ' ' + u.last_name}}</b></ion-text>
-                      <ion-card-subtitle><a [href]="'mailto:'+u.email"> {{ u.email }} </a></ion-card-subtitle>
-                      <ion-card-subtitle>DNI {{u.dni}}</ion-card-subtitle>
-                    </ion-label>
-                  
-                    <ion-buttons class="ion-hide-md-up">
-                      <ion-button (click)="mostrarAcciones($event, u.id)">
-                        <ion-icon
-                          slot="icon-only"
-                          ios="ellipsis-horizontal"
-                          md="ellipsis-vertical"
-                        ></ion-icon>
+                      </ion-buttons>
+                    </ion-row>
+                  </ion-col>
+                  <ion-col
+                    size="2"
+                    class="ion-hide-md-down ion-align-self-center"
+                  >
+                    <!-- <ion-text>{{ u.rol_id }}</ion-text> -->
+                    <ion-text *ngIf="rolificador.isAdmin(userLogged.user)">{{ getRoleType(u.role_id) }}</ion-text>
+                    <!-- <ion-text>{{ db.getRoleType(u.rol_id) }}</ion-text> -->
+                  </ion-col>
+                  <!-- <ion-col
+                    size="2"
+                    class="ion-hide-md-down ion-align-self-center"
+                  >
+                  <a [href]="'mailto:'+u.email"> {{ u.email }} </a>
+                  </ion-col> -->
+                  <ion-col
+                    size="2"
+                    class="ion-hide-md-down ion-align-self-center"
+                  >
+                    <!-- <ion-text>{{  u.fotoclub_id }}</ion-text> -->
+                    <ion-text *ngIf="rolificador.isAdmin(userLogged.user)">{{  getFotoclubName(u.profile_id) }}</ion-text>
+                    <!-- <ion-text>{{ db.getFotoclubName(u.fotoclub_id) }}</ion-text> -->
+                  </ion-col>
+                  <ion-col
+                    size="2"
+                    class="ion-align-self-center ion-hide-md-down"
+                  >
+                    <ion-buttons>
+                      <ion-button [routerLink]="['editar/' + u.id]">
+                        <ion-icon name="create"></ion-icon>
+                      </ion-button>
+                      <ion-button (click)="deleteUsuario(u.id)">
+                        <ion-icon name="trash"></ion-icon>
                       </ion-button>
                     </ion-buttons>
-                  </ion-item> -->
-                </ion-col>
-                <ion-col
-                  size="2"
-                  class="ion-hide-md-down ion-align-self-center"
-                >
-                  <!-- <ion-text>{{ u.rol_id }}</ion-text> -->
-                  <ion-text>{{ getRoleType(u.role_id) }}</ion-text>
-                  <!-- <ion-text>{{ db.getRoleType(u.rol_id) }}</ion-text> -->
-                </ion-col>
-                <!-- <ion-col
-                  size="2"
-                  class="ion-hide-md-down ion-align-self-center"
-                >
-                <a [href]="'mailto:'+u.email"> {{ u.email }} </a>
-                </ion-col> -->
-                <ion-col
-                  size="2"
-                  class="ion-hide-md-down ion-align-self-center"
-                >
-                  <!-- <ion-text>{{  u.fotoclub_id }}</ion-text> -->
-                  <ion-text>{{  getFotoclubName(u.profile_id) }}</ion-text>
-                  <!-- <ion-text>{{ db.getFotoclubName(u.fotoclub_id) }}</ion-text> -->
-                </ion-col>
-                <ion-col
-                  size="2"
-                  class="ion-align-self-center ion-hide-md-down"
-                >
-                  <ion-buttons>
-                    <ion-button [routerLink]="['editar/' + u.id]">
-                      <ion-icon name="create"></ion-icon>
-                    </ion-button>
-                    <ion-button (click)="deleteUsuario(u.id)">
-                      <ion-icon name="trash"></ion-icon>
-                    </ion-button>
-                  </ion-buttons>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-item>
-        </ion-list>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item>
+          </ion-list>
+        </ng-template>
         <ng-template #texto >
           <ion-item>
             <ion-spinner *ngIf="loading"></ion-spinner>
