--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -136,7 +136,7 @@
                           class="ion-align-items-center ion-justify-content-between"
                         > <!-- user card -->
                           <ion-col size="3" size-md="2">
-                            <app-usuario-img [src]="m.img_url"></app-usuario-img>
+                            <app-usuario-img src="fafafa"></app-usuario-img>
                           </ion-col>
                           <ion-col size-md="10">
                             <ion-label class="ion-margin-start">
