--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -293,7 +293,7 @@
                     </ion-col>
                   </ion-row>
                 </ion-grid>
-                <!-- <ng-template #texto>No hay fotografias</ng-template> -->
+                <ng-template #texto>No hay fotografias</ng-template>
               </ion-item>
             </ion-list>
           </ion-col>
