--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -12,47 +12,49 @@
 
           <ion-row class="">
             <ion-card class="ion-margin-top expand-full">
-              
-                <ion-item class="ion-margin">
-                  <ion-label position="stacked">Username</ion-label>
-                  <ion-input
-                    class="text-right"
-                    (keypress)="keyPress($event)"
-                    [(ngModel)]="login.username"
-                    ngDefaultControl
-                  ></ion-input>
-                </ion-item>
+              <ion-item class="ion-margin">
+                <ion-label position="stacked">Username</ion-label>
+                <ion-input
+                  class="text-right"
+                  (keypress)="keyPress($event)"
+                  [(ngModel)]="login.username"
+                  ngDefaultControl
+                ></ion-input>
+              </ion-item>
 
-                <ion-item class="ion-margin">
+              <ion-item class="ion-margin">
+                <ion-col>
                   <ion-label position="stacked">Contraseña</ion-label>
                   <ion-input
                     #passInput
                     tabindex="0"
+                    id="ctr-1"
                     type="password"
                     class="text-right"
                     (keypress)="keyPress($event, 'next')"
                     [(ngModel)]="login.password"
                     ngDefaultControl
                   ></ion-input>
-                </ion-item>
+                </ion-col>
+                <app-ojo inputId="ctr-1"></app-ojo>
+              </ion-item>
 
-                <!-- color="primary" -->
-                <ion-button
+              <!-- color="primary" -->
+              <ion-button
                 color="primary"
-                  expand="block"
-                  class="ion-margin"
-                  (click)="next()"
-                >
-                  <ion-label *ngIf="!loading; else spinner">Ingresar</ion-label>
-                  <ng-template #spinner>
-                    <ion-spinner></ion-spinner>
-                  </ng-template>
-                </ion-button>
+                expand="block"
+                class="ion-margin"
+                (click)="next()"
+              >
+                <ion-label *ngIf="!loading; else spinner">Ingresar</ion-label>
+                <ng-template #spinner>
+                  <ion-spinner></ion-spinner>
+                </ng-template>
+              </ion-button>
 
-                <ion-item color="danger" *ngIf="error != undefined">
-                  <ion-label>{{ error }}</ion-label>
-                </ion-item>
-              
+              <ion-item color="danger" *ngIf="error != undefined">
+                <ion-label>{{ error }}</ion-label>
+              </ion-item>
             </ion-card>
           </ion-row>
         </ion-col>
