--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -12,31 +12,47 @@
 
           <ion-row class="">
             <ion-card class="ion-margin-top expand-full">
-              <ion-item class="ion-margin">
-                <ion-label position="stacked">Username</ion-label>
-                <ion-input
-                  class="text-right"
-                  (keypress)="keyPress($event)"
-                  [(ngModel)]="login.username"
-                  ngDefaultControl
-                ></ion-input>
+              <ion-item class="ion-margin-start ion-margin-end ion-no-padding">
+                <ion-col>
+                  <ion-row>
+                    <ion-col>
+
+                      <ion-label position="stacked">Username</ion-label>
+                      <ion-input
+                        class="text-right"
+                        (keypress)="keyPress($event)"
+                        [(ngModel)]="login.username"
+                        ngDefaultControl
+                      ></ion-input>
+                    </ion-col>
+
+                  </ion-row>
+                </ion-col>
               </ion-item>
 
-              <ion-item class="ion-margin">
+              <ion-item class="ion-margin-start ion-margin-end ion-no-padding">
                 <ion-col>
-                  <ion-label position="stacked">Contraseña</ion-label>
-                  <ion-input
-                    #passInput
-                    tabindex="0"
-                    id="ctr-1"
-                    type="password"
-                    class="text-right"
-                    (keypress)="keyPress($event, 'next')"
-                    [(ngModel)]="login.password"
-                    ngDefaultControl
-                  ></ion-input>
+
+                  <ion-row >
+                    <ion-col size="10">
+                      <ion-label position="stacked">Contraseña</ion-label>
+                      <ion-input
+                        #passInput
+                        tabindex="0"
+                        id="ctr-1"
+                        type="password"
+                        class="text-right"
+                        (keypress)="keyPress($event, 'next')"
+                        [(ngModel)]="login.password"
+                        ngDefaultControl
+                      ></ion-input>
+                    </ion-col>
+                    <ion-col class="ion-no-padding ion-align-self-center" size="2">
+    
+                      <app-ojo inputId="ctr-1"></app-ojo>
+                    </ion-col>
+                  </ion-row>
                 </ion-col>
-                <app-ojo inputId="ctr-1"></app-ojo>
               </ion-item>
 
               <!-- color="primary" -->
