--- a/src/app/shared/input-ojo/input-ojo.component.html
+++ b/src/app/shared/input-ojo/input-ojo.component.html
@@ -1,5 +1,5 @@
 <!-- <ion-col size="2"> -->
-    <ion-button (click)="toggleVisibility()" fill="clear" 
+    <ion-button *ngIf="passwordInput.value != ''" (click)="toggleVisibility()" fill="clear" 
       [disabled]="passwordInput.value == ''"
     >
       <ion-icon *ngIf="visibility == true; else noVisible" size="large" name="eye-off-outline"></ion-icon>
