--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-grid *ngIf="(auth.user | async) as userLogged">
+  <ion-grid class="ion-no-padding" *ngIf="(auth.user | async) as userLogged">
     <ion-row>
       <ion-col size="3" *ngIf="mostrarFiltro">
         <ion-col>
@@ -76,14 +76,13 @@
           </ion-col>
         </ion-col>
       </ion-col>
-    <!-- </ion-col> -->
-    
-    
+      <!-- </ion-col> -->
+
       <ion-col>
         <ion-row>
           <ion-col size="11.5" push="0.25">
-            <!-- usuario, email, fotoclub -->
-            <ion-grid>
+            <!-- usuario, email, fotoclub/entidad -->
+            <ion-grid class="ion-no-padding ion-padding-bottom">
               <ion-row
                 class="
                   ion-justify-content-start
@@ -101,29 +100,66 @@
               </ion-row>
 
               <ion-row class="ion-align-items-center">
-                <ion-col size="11"
+                <ion-col
                   ><app-search-bar
                     (buscar)="filtrarUsuarios($event)"
                     [atributos]="['username', 'email']"
                   >
                   </app-search-bar
                 ></ion-col>
-                <ion-col size="1">
-                  <ion-button (click)="toggleFiltro()" color="medium">
-                    <ion-icon name="funnel"></ion-icon>
-                    <!-- <ion-icon name="options"></ion-icon> -->
-                  </ion-button></ion-col
-                >
-              </ion-row>
-
-              <ion-row class="ion-hide-md-down">
-                <ion-col size="6">{{rolificador.getNombreUsuarios(userLogged.role_id)}}</ion-col>
-                <!-- <ion-col size="2">Email</ion-col> -->
-                <ion-col size="2"><ion-text *ngIf="rolificador.isAdmin(userLogged)">Rol</ion-text></ion-col>
-                <ion-col size="2"><ion-text *ngIf="rolificador.isAdmin(userLogged)">Entidad</ion-text></ion-col>
-                <ion-col size="2">Acciones</ion-col>
+                <ion-col size="2" size-sm="1">
+                  <ion-row
+                    class="
+                      ion-justify-content-center
+                      ion-align-items-center
+                      ion-align-self-center
+                    "
+                  >
+                    <ion-button
+                      (click)="toggleFiltro()"
+                      color="medium"
+                      expand="block"
+                      class="
+                        ion-justify-content-center
+                        ion-align-items-center
+                        ion-align-self-center
+                      "
+                    >
+                      <ion-icon name="funnel"></ion-icon>
+                      <!-- <ion-icon name="options"></ion-icon> -->
+                    </ion-button>
+                  </ion-row>
+                </ion-col>
               </ion-row>
             </ion-grid>
+
+            <ion-list class="ion-hide-sm-down cabecera">
+              <ion-item color="dark">
+                <ion-grid>
+                  <ion-col>
+                    <ion-row>
+                      <ion-col size="5.5" size-md="7"
+                        ><b
+                          >{{rolificador.getNombreUsuarios(userLogged.role_id)}}</b
+                        ></ion-col
+                      >
+                      <!-- <ion-col size="2">Email</ion-col> -->
+                      <ion-col size="2.5" size-md="2"
+                        ><ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                          ><b>Rol</b></ion-text
+                        ></ion-col
+                      >
+                      <ion-col size="2.5" size-md="2"
+                        ><ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                          ><b>Entidad</b></ion-text
+                        ></ion-col
+                      >
+                      <ion-col size="1.5" size-md="1"><b>Acciones</b></ion-col>
+                    </ion-row>
+                  </ion-col>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
 
             <!-- <div *ngIf="(users | async) as usuarios"> -->
             <div *ngIf="(miembros | async) as miembros">
@@ -131,47 +167,68 @@
                 <ion-item *ngFor="let m of miembros">
                   <ion-grid>
                     <ion-row size="12">
-                      <ion-col size="12" size-md="6">
+                      <ion-col size="12" size-md="7" size-sm="5.5">
                         <ion-row
-                          class="ion-align-items-center ion-justify-content-between"
-                        > <!-- user card -->
-                          <ion-col size="3" size-md="2">
+                          class="
+                            ion-align-items-center ion-justify-content-between
+                          "
+                        >
+                          <!-- user card -->
+                          <ion-col size="3" size-sm="1.3">
                             <app-usuario-img src="fafafa"></app-usuario-img>
                           </ion-col>
-                          <ion-col size-md="10">
+                          <ion-col size="8" size-sm="10.7">
                             <ion-label class="ion-margin-start">
-                              <ion-card-subtitle title="Username">{{m.user.username}}</ion-card-subtitle>
+                              <ion-card-subtitle title="Username"
+                                >{{m.user.username}}</ion-card-subtitle
+                              >
                               <ion-text title="Nombre">
                                 <b>{{m.name}} {{m.last_name}}</b>
                               </ion-text>
                             </ion-label>
                           </ion-col>
-                          <ion-buttons class="ion-hide-md-up">
-                            <ion-button (click)="mostrarAcciones($event, m.user.id)">
-                              <ion-icon
-                                slot="icon-only"
-                                ios="ellipsis-horizontal"
-                                md="ellipsis-vertical"
-                              ></ion-icon>
-                            </ion-button>
-                          </ion-buttons>
+                          <ion-col
+                            size="1"
+                            class="ion-hide-sm-up ion-justify-content-center"
+                          >
+                            <ion-buttons>
+                              <ion-button
+                                (click)="mostrarAcciones($event, m.user.id)"
+                              >
+                              <!-- <ion-thumbnail></ion-thumbnail> -->
+                                <ion-icon
+
+                                slot="start"
+                                  ios="ellipsis-horizontal"
+                                  md="ellipsis-vertical"
+                                ></ion-icon>
+                              </ion-button>
+                            </ion-buttons>
+                          </ion-col>
                         </ion-row>
                       </ion-col>
                       <ion-col
-                        size="2"
-                        class="ion-hide-md-down ion-align-self-center"
+                        size="2.5"
+                        size-md="2"
+                        class="ion-hide-sm-down ion-align-self-center"
                       >
-                        <ion-text *ngIf="rolificador.isAdmin(userLogged)">{{ getRoleType(m.user.role_id) }}</ion-text>
+                        <ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                          >{{ getRoleType(m.user.role_id) }}</ion-text
+                        >
                       </ion-col>
                       <ion-col
-                        size="2"
-                        class="ion-hide-md-down ion-align-self-center"
+                        size="2.5"
+                        size-md="2"
+                        class="ion-hide-sm-down ion-align-self-center"
                       >
-                        <ion-text *ngIf="rolificador.isAdmin(userLogged)">{{  getFotoclubName(m.fotoclub_id) }}</ion-text>
+                        <ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                          >{{ getFotoclubName(m.fotoclub_id) }}</ion-text
+                        >
                       </ion-col>
                       <ion-col
-                        size="2"
-                        class="ion-align-self-center ion-hide-md-down"
+                        size="1.5"
+                        size-md="1"
+                        class="ion-align-self-center ion-hide-sm-down"
                       >
                         <ion-buttons>
                           <ion-button [routerLink]="['editar/' + m.user.id]">
@@ -184,31 +241,33 @@
                       </ion-col>
                     </ion-row>
                   </ion-grid>
-
                 </ion-item>
               </ion-list>
             </div>
-            <ng-template #texto >
+            <ng-template #texto>
               <ion-item>
                 <ion-spinner *ngIf="loading"></ion-spinner>
                 <ion-item *ngIf="!loading">No hay usuarios</ion-item>
-                <ion-item *ngIf="searchParams != undefined"> con {{searchParams.atributo}} que empiece con '{{ searchParams.query }}'</ion-item>
+                <ion-item *ngIf="searchParams != undefined">
+                  con {{searchParams.atributo}} que empiece con '{{
+                  searchParams.query }}'</ion-item
+                >
               </ion-item>
             </ng-template>
           </ion-col>
         </ion-row>
-      </ion-col>  
+      </ion-col>
     </ion-row>
   </ion-grid>
 
-  <ion-fab
+  <!-- <ion-fab
     vertical="bottom"
     horizontal="end"
     slot="fixed"
-    class="ion-hide-md-up"
+    class="ion-hide-sm-up"
   >
     <ion-fab-button [routerLink]="['nuevo']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
 </ion-content>
