--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -47,7 +47,7 @@
     </ion-card-content>
     <!-- <ion-label>{{item}}</ion-label> -->
   </ion-card>
-  <ion-grid>
+  <ion-grid class="ion-no-padding">
     <ion-row class="ion-justify-content-center">
       <!-- filtro -->
       <ion-col size="3" *ngIf="mostrarFiltro">
@@ -196,59 +196,84 @@
               </ion-fab-button>
             </ion-row>
 
-            <ion-row class="ion-align-items-center">
-              <ion-col size="11"
+            <ion-row class="ion-align-items-center ion-padding-bottom">
+              <ion-col size="10" size-sm="11"
                 ><app-search-bar [atributos]="['Titulo', 'Codigo']">
                 </app-search-bar
               ></ion-col>
-              <ion-col size="1">
-                <ion-button (click)="toggleFiltro()" color="medium">
-                  <ion-icon name="funnel"></ion-icon>
-                  <!-- <ion-icon name="options"></ion-icon> -->
-                </ion-button></ion-col
-              >
+              <ion-col size="2" size-sm="1">
+                <ion-row
+                  class="
+                    ion-justify-content-center
+                    ion-align-items-center
+                    ion-align-self-center
+                  "
+                >
+                  <ion-button
+                    (click)="toggleFiltro()"
+                    color="medium"
+                    expand="block"
+                    class="
+                      ion-justify-content-center
+                      ion-align-items-center
+                      ion-align-self-center
+                    "
+                  >
+                    <ion-icon name="funnel"></ion-icon>
+                    <!-- <ion-icon name="options"></ion-icon> -->
+                  </ion-button>
+                </ion-row>
+              </ion-col>
             </ion-row>
-            <ion-grid>
-              <ion-row class="ion-padding-end">
-                <!-- class="ion-text-center" -->
-                <ion-col size="6" size-md="3" class="">Obra</ion-col>
-                <ion-col
-                  class="ion-hide-md-down ion-padding-start"
-                  size="4"
-                  size-md="3"
-                  >Autor</ion-col
-                >
-                <ion-col class="ion-text-center" size="3" size-md="2"
-                  >Premio</ion-col
-                >
-                <ion-col class="ion-hide-md-down ion-text-center" size="2"
-                  >Puntaje</ion-col
-                >
-                <ion-col class="ion-hide-md-up ion-text-center" size="2"
-                  >Ptje</ion-col
-                >
+            <ion-list>
+              <ion-item color="dark">
+                <ion-grid>
+                  <ion-row class="ion-padding-end">
+                    <!-- class="ion-text-center" -->
+                    <ion-col size="6" size-md="3" class=""><b>Obra</b></ion-col>
+                    <ion-col
+                      class="ion-hide-md-down ion-padding-start"
+                      size="4"
+                      size-md="3"
+                      ><b>Autor</b></ion-col
+                    >
+                    <ion-col class="ion-text-center" size="3" size-md="2"
+                      ><b>Premio</b></ion-col
+                    >
+                    <ion-col class="ion-hide-md-down ion-text-center" size="2"
+                      ><b>Puntaje</b></ion-col
+                    >
+                    <ion-col class="ion-hide-md-up ion-text-center" size="2"
+                      ><b>Ptje</b></ion-col
+                    >
 
-                <ion-col size="2"></ion-col>
-              </ion-row>
-            </ion-grid>
+                    <ion-col size="2"></ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
             <ion-list>
               <ion-item class="ion-no-padding">
                 <!-- <ion-grid *ngIf="!loading"> -->
                 <ion-grid *ngIf="resultadosConcurso.length > 0; else texto">
                   <!-- <ion-grid *ngIf="(resultadosConcurso | async) as contestResults"> -->
                   <!-- class="ion-text-center" -->
-                  <ion-row size="12" *ngFor="let r of resultadosConcurso">
+                  <ion-row *ngFor="let r of resultadosConcurso">
                     <ion-col size="6" size-md="3" class="ion-align-self-center">
-                      <ion-card-subtitle title="Código de la obra"
-                        >{{ r.image.code }}</ion-card-subtitle
-                      >
-                      <!-- >{{ getImage(r).code }}</ion-card-subtitle> -->
-                      <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
+                      <ion-item>
+                        <ion-col>
+                          <ion-card-subtitle title="Código de la obra"
+                            >{{ r.image.code }}</ion-card-subtitle
+                          >
+                          <!-- >{{ getImage(r).code }}</ion-card-subtitle> -->
+                          <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
 
-                      <ion-text title="Nombre de la obra"
-                        ><b>{{ r.image.title }}</b></ion-text
-                      >
-                      <!-- ><b>{{ getImage(r).title }}</b></ion-text> -->
+                          <ion-text title="Nombre de la obra"
+                            ><b>{{ r.image.title }}</b></ion-text
+                          >
+                          <!-- ><b>{{ getImage(r).title }}</b></ion-text> -->
+                        </ion-col>
+                      </ion-item>
                     </ion-col>
                     <ion-col
                       class="
@@ -290,7 +315,7 @@
 
                     <ion-col size="1" size-md="2" class="ion-align-self-center">
                       <ion-buttons
-                        class="ion-hide-lg-down ion-justify-content-end"
+                        class="ion-hide-md-down ion-justify-content-end"
                       >
                         <ion-button (click)="reviewImage(r)">
                           <!-- <ion-button (click)="reviewImage(getImage(r), r)"> -->
@@ -306,7 +331,7 @@
                           <ion-icon name="trash"></ion-icon>
                         </ion-button>
                       </ion-buttons>
-                      <ion-buttons class="ion-hide-lg-up">
+                      <ion-buttons class="ion-hide-md-up">
                         <ion-button (click)="mostrarAcciones($event, r)">
                           <ion-icon
                             slot="icon-only"
