un poco de orden en 'concurso-detail'

--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -237,13 +237,13 @@
                       size-md="3"
                       ><b>Autor</b></ion-col
                     >
-                    <ion-col class="ion-text-center" size="3" size-md="2"
+                    <ion-col size="3" size-md="2"
                       ><b>Premio</b></ion-col
                     >
-                    <ion-col class="ion-hide-md-down ion-text-center" size="2"
+                    <ion-col class="ion-hide-md-down " size="2"
                       ><b>Puntaje</b></ion-col
                     >
-                    <ion-col class="ion-hide-md-up ion-text-center" size="2"
+                    <ion-col class="ion-hide-md-up" size="2"
                       ><b>Ptje</b></ion-col
                     >
 
@@ -277,7 +277,7 @@
                     </ion-col>
                     <ion-col
                       class="
-                        ion-hide-md-down ion-text-center ion-align-self-center
+                        ion-hide-md-down ion-align-self-center
                       "
                       size="4"
                       size-md="3"
@@ -298,7 +298,7 @@
                       </ion-item>
                     </ion-col>
                     <ion-col
-                      class="ion-text-center ion-align-self-center"
+                      class="ion-align-self-center"
                       size="3"
                       size-md="2"
                     >
@@ -306,7 +306,7 @@
                       <!-- <ion-text>{{ getMetric(r).prize }}</ion-text> -->
                     </ion-col>
                     <ion-col
-                      class="ion-text-center ion-align-self-center"
+                      class="ion-align-self-center"
                       size="2"
                     >
                       <ion-text>{{ r.metric.score }}</ion-text>
@@ -315,7 +315,7 @@
 
                     <ion-col size="1" size-md="2" class="ion-align-self-center">
                       <ion-buttons
-                        class="ion-hide-md-down ion-justify-content-end"
+                        class="ion-hide-md-down ion-justify-content-center"
                       >
                         <ion-button (click)="reviewImage(r)">
                           <!-- <ion-button (click)="reviewImage(getImage(r), r)"> -->
