se sacaron los chip en concurso

--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -75,10 +75,10 @@
               </ion-fab-button>
             </ion-col>
           </ion-row>
-          <ion-row>
+          <!-- <ion-row>
             <ion-list-header>
               <ion-label>Etiquetas:</ion-label>
-            </ion-list-header>
+            </ion-list-header> -->
             <!-- <ion-row> -->
             <!-- <ion-chip (click)="toggleChipMark()">
               <ion-icon
@@ -88,7 +88,7 @@
               ></ion-icon>
               <ion-label>Default</ion-label>
             </ion-chip> -->
-          </ion-row>
+          <!-- </ion-row> -->
         </ion-col>
       </ion-col>
       <ion-col>
