--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -1,4 +1,4 @@
-<ion-grid class="ion-no-padding">
+<ion-grid class="ion-no-padding ion-no-margin">
   <ion-row class="ion-justify-content-center">
     <!-- filtro -->
     <ion-col size="3" *ngIf="mostrarFiltro">
