avances en tabs de concurso detail

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -284,7 +284,7 @@
                       </ion-button>
                     </ion-buttons>
                     <ion-buttons class="ion-hide-md-up">
-                      <ion-button (click)="concursoDetailService.mostrarAcciones($event, r)">
+                      <ion-button (click)="mostrarAcciones($event, r)">
                         <ion-icon
                           slot="icon-only"
                           ios="ellipsis-horizontal"
