fix suscripciones de concurso detail service

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -142,7 +142,7 @@
               Fotografías
             </h1>
             <ion-fab-button size="small" 
-              (click)="concursoDetailService.postImage.emit(undefined)">
+              (click)="postImage()">
               <!-- [routerLink]="['agregar-foto']"   -->
               <ion-icon name="add"></ion-icon>
             </ion-fab-button>
