--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -1,3 +1,293 @@
-<p>
-  concursantes works!
-</p>
+<ion-grid class="ion-no-padding ion-no-margin" *ngIf="(auth.user | async) as userLogged">
+  <ion-row class="ion-justify-content-center">
+    <!-- filtro -->
+    <ion-col size="3" *ngIf="mostrarFiltro">
+      <ion-col>
+        <ion-title class="ion-margin-top">Búsqueda</ion-title>
+
+        <ion-list>
+          <ion-radio-group value="biff">
+            <ion-list-header>
+              <ion-label>Filtrar por:</ion-label>
+            </ion-list-header>
+
+            <ion-item>
+              <ion-label>Nombre</ion-label>
+              <ion-radio slot="start" value="nombre"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Código</ion-label>
+              <ion-radio slot="start" value="codigo"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Concursante</ion-label>
+              <ion-radio slot="start" value="concursante"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Fotoclub</ion-label>
+              <ion-radio slot="start" value="fotoclub"></ion-radio>
+            </ion-item>
+          </ion-radio-group>
+        </ion-list>
+
+        <ion-row>
+          <ion-col class="ion-no-padding ion-margin-top">
+            <ion-item>
+              <ion-col>
+                <ion-row>
+                  <ion-label>Puntaje:</ion-label>
+                </ion-row>
+                <ion-row>
+                  <!-- [(ngModel)]="value" -->
+                  <ion-range
+                    dualKnobs="true"
+                    min="1000"
+                    max="2000"
+                    step="100"
+                    snaps="true"
+                    ticks="false"
+                    color="secondary"
+                  ></ion-range>
+                </ion-row>
+              </ion-col>
+            </ion-item>
+          </ion-col>
+
+          <!-- <ion-col>
+            <ion-item>
+              <ion-label position="stacked">Desde</ion-label>
+              <ion-input type="number" min="1" max="13" name="desde_puntaje">
+              </ion-input> </ion-item
+          ></ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-label position="stacked">Hasta</ion-label>
+              <ion-input type="number" min="1" max="13" name="hasta_puntaje">
+              </ion-input> </ion-item
+          ></ion-col>
+          <ion-col
+            ><ion-fab-button size="small">
+              <ion-icon
+                name="arrow-forward-circle"
+              ></ion-icon> </ion-fab-button
+          ></ion-col> -->
+        </ion-row>
+
+        <ion-col>
+          <!-- opcion 1 -->
+          <!--   <ion-list>
+            <ion-list-header>
+              <ion-label>Premio:</ion-label>
+            </ion-list-header>
+            <ion-button fill="clear" href="#">Reprobado</ion-button>
+            <ion-button fill="clear" href="#">Aprobado</ion-button>
+            <ion-button fill="clear" href="#">Mención</ion-button>
+            <ion-button fill="clear" href="#">Medalla</ion-button>
+            <ion-button fill="clear" href="#">1° Premio</ion-button>
+          </ion-list> -->
+
+          <!-- opcion 2 -->
+          <ion-list>
+            <ion-list-header>
+              <ion-label>Premio:</ion-label>
+            </ion-list-header>
+            <ion-item
+              ><ion-button fill="clear" href="#"
+                >Reprobado</ion-button
+              ></ion-item
+            >
+            <ion-item
+              ><ion-button fill="clear" href="#"
+                >Aprobado</ion-button
+              ></ion-item
+            >
+            <ion-item>
+              <ion-button fill="clear" href="#">Mención</ion-button></ion-item
+            >
+            <ion-item>
+              <ion-button fill="clear" href="#"
+                >Medalla Oro</ion-button
+              ></ion-item
+            >
+            <ion-item>
+              <ion-button fill="clear" href="#"
+                >Medalla Plata</ion-button
+              ></ion-item
+            >
+            <ion-item>
+              <ion-button fill="clear" href="#"
+                >Medalla Bronce</ion-button
+              ></ion-item
+            >
+          </ion-list>
+        </ion-col>
+      </ion-col>
+    </ion-col>
+
+    <ion-col>
+      <ion-row>
+        <ion-col size="11.5" push="0.25">
+          <ion-row
+            class="
+              ion-justify-content-start
+              ion-align-items-center
+              ion-margin-top
+              ion-margin-bottom
+            "
+          >
+            <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
+              Inscriptos
+            </h1>
+            <ion-fab-button size="small" 
+              (click)="concursoDetailService.inscribirConcursante.emit()">
+              <!-- [routerLink]="['agregar-foto']"   -->
+              <ion-icon name="add"></ion-icon>
+            </ion-fab-button>
+          </ion-row>
+
+          <ion-row class="ion-align-items-center ion-padding-bottom">
+            <ion-col size="10" size-sm="11"
+              ><app-search-bar [atributos]="['Titulo', 'Codigo']">
+              </app-search-bar
+            ></ion-col>
+            <ion-col size="2" size-sm="1">
+              <ion-row
+                class="
+                  ion-justify-content-center
+                  ion-align-items-center
+                  ion-align-self-center
+                "
+              >
+                <ion-button
+                  (click)="toggleFiltro()"
+                  color="medium"
+                  expand="block"
+                  class="
+                    ion-justify-content-center
+                    ion-align-items-center
+                    ion-align-self-center
+                  "
+                >
+                  <ion-icon name="funnel"></ion-icon>
+                  <!-- <ion-icon name="options"></ion-icon> -->
+                </ion-button>
+              </ion-row>
+            </ion-col>
+          </ion-row>
+          <ion-list>
+            <ion-item color="dark">
+              <ion-grid>
+                <ion-row>
+                  <ion-col size="6.5" size-md="9"
+                    ><b
+                      >Concursante</b
+                    ></ion-col
+                  >
+                  <!-- *ngIf="rolificador.isAdmin(userLogged)" -->
+                  <ion-col size="3.5" size-md="2"
+                  ><ion-text 
+                  ><b>Entidad</b></ion-text
+                  ></ion-col
+                  >
+                  <ion-col size="2" size-md="1"><b>Acciones</b></ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-item>
+          </ion-list>
+          <ion-list *ngIf="!loading; else spinner">
+            <ion-item class="ion-no-padding">
+              <!-- <ion-grid *ngIf="!loading"> -->
+              <ion-grid *ngIf="inscriptos.length > 0; else texto">
+                <!-- <ion-grid *ngIf="(resultadosConcurso | async) as contestResults"> -->
+                <!-- class="ion-text-center" -->
+                <ion-item *ngFor="let m of inscriptos">
+                  <ion-grid>
+                    <ion-row size="12">
+                      <ion-col size="12" size-md="7" size-sm="5.5">
+                        <ion-row
+                          class="
+                            ion-align-items-center ion-justify-content-between
+                          "
+                        >
+                          <!-- user card -->
+                          <ion-col size="3" size-sm="1.3">
+                            <app-usuario-img src="fafafa"></app-usuario-img>
+                          </ion-col>
+                          <ion-col size="8" size-sm="10.7">
+                            <ion-label class="ion-margin-start">
+                              <ion-card-subtitle title="Username"
+                                >{{m.profile.user.username}}</ion-card-subtitle
+                              >
+                              <ion-text title="Nombre">
+                                <b>{{m.profile.name}} {{m.profile.last_name}}</b>
+                              </ion-text>
+                              <ion-card-subtitle title="Username"
+                              >{{getFotosCargadas(m.profile_id)}} fotos cargadas</ion-card-subtitle>
+                            </ion-label>
+                          </ion-col>
+                          <ion-col
+                            size="1"
+                            class="ion-hide-sm-up ion-justify-content-center"
+                          >
+                            <ion-buttons>
+                              <ion-button
+                                (click)="mostrarAcciones($event, m.profile.user.id)"
+                              >
+                              <!-- <ion-thumbnail></ion-thumbnail> -->
+                                <ion-icon
+
+                                slot="start"
+                                  ios="ellipsis-horizontal"
+                                  md="ellipsis-vertical"
+                                ></ion-icon>
+                              </ion-button>
+                            </ion-buttons>
+                          </ion-col>
+                        </ion-row>
+                      </ion-col>
+                      <ion-col
+                        size="2.5"
+                        size-md="2"
+                        class="ion-hide-sm-down ion-align-self-center"
+                      >
+                        <ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                          >{{ getFotoclubName(m.profile_id) }}</ion-text
+                        >
+                      </ion-col>
+                      <ion-col
+                        size="1.5"
+                        size-md="1"
+                        class="ion-align-self-center ion-hide-sm-down"
+                      >
+                        <ion-buttons>
+                          <ion-button (click)="concursoDetailService.postImage.emit({
+                            id: undefined,
+                            profile_id: m.profile_id,
+                            code: undefined,
+                            title: undefined
+                          })">
+                            <ion-icon name="camera-outline"></ion-icon>
+                          </ion-button>
+                          <ion-button (click)="concursoDetailService.desinscribirConcursante.emit(m)">
+                            <ion-icon name="trash"></ion-icon>
+                          </ion-button>
+                        </ion-buttons>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
+              </ion-grid>
+              <ng-template #texto>No hay inscriptos</ng-template>
+            </ion-item>
+          </ion-list>
+          <ng-template #spinner>
+            <ion-spinner></ion-spinner>
+          </ng-template>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+  </ion-row>
+</ion-grid>
