centrado de elementos

--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -284,7 +284,9 @@
             </ion-item>
           </ion-list>
           <ng-template #spinner>
-            <ion-spinner></ion-spinner>
+            <ion-row class="ion-justify-content-center">
+              <ion-spinner ></ion-spinner>
+            </ion-row>
           </ng-template>
         </ion-col>
       </ion-row>
