--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -48,7 +48,10 @@
     <!-- <ion-label>{{item}}</ion-label> -->
   </ion-card>
   <ng-template #spinner>
-    <ion-spinner></ion-spinner>
+    <ion-row class="ion-justify-content-center">
+      <ion-spinner ></ion-spinner>
+    </ion-row>
+   
   </ng-template>
 
 
