--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -140,7 +140,9 @@
           </ion-row>
         </form>
         <ng-template #spinner>
-          <ion-spinner></ion-spinner>
+          <ion-row class="ion-justify-content-center">
+            <ion-spinner ></ion-spinner>
+          </ion-row>
         </ng-template>
       </ion-col>
     </ion-row>
