--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -254,7 +254,9 @@
               </ng-template>
             </div>
             <ng-template #spinner>
-              <ion-spinner></ion-spinner> 
+              <ion-row class="ion-justify-content-center">
+                <ion-spinner ></ion-spinner>
+              </ion-row>
             </ng-template>
           </ion-col>
         </ion-row>
