--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -54,34 +54,57 @@
                   </ion-select>
                 </ion-item>
               </ion-row>
-              <ion-row class="ion-justify-content-end">
-                <ion-col>
-                  <ion-row class="ion-justify-content-end">
-                    <ion-button
-                      (click)="dismiss()"
-                      fill="clear"
-                      class="ion-margin-start"
-                    >
-                      Cancelar</ion-button
-                    >
 
-                    <ion-button
-                      expand="block"
-                      type="submit"
-                      class="ion-margin-start"
-                      (click)="postImage()"
-                      [disabled]="!datosCargados()"
+
+              <ion-row class="ion-justify-content-end">
+                <ion-col size="12">
+                  <ion-row class="ion-justify-content-end">
+                    <ion-col
+                      push-sm="3"
+                      size="12"
+                      size-sm="3"
+                      class="ion-align-self-center"
                     >
-                      <ion-spinner
-                        *ngIf="posting"
-                        class="ion-margin-end"
-                        size="small"
-                      ></ion-spinner>
-                      Guardar
-                    </ion-button>
+                      <ion-button
+                        expand="block"
+                        type="submit"
+                        (click)="postImage()"
+                        [disabled]="!datosCargados()"
+                      >
+                        <ion-spinner
+                          *ngIf="posting"
+                          class="ion-margin-end"
+                          size="small"
+                        ></ion-spinner>
+                        Guardar
+                      </ion-button>
+                    </ion-col>
+              
+                    <ion-col
+                      class="ion-align-self-center"
+                      pull-sm="3"
+                      size="12"
+                      size-sm="3"
+                    >
+                    <!-- <ion-back-button
+                    text="Cancelar"
+                    icon=""
+                    (click)="dismiss()"
+                    [defaultHref]="backUrl"
+                  ></ion-back-button
+                > -->
+                    <ion-button
+                    expand="block"
+                    (click)="dismiss()"
+                    fill="clear"
+                  >
+                    Cancelar</ion-button
+                  >
+                </ion-col>
                   </ion-row>
                 </ion-col>
               </ion-row>
+              
             </ion-col>
           </ion-row>
         </ion-col>
