--- a/src/app/concursos/concurso-detail/image-review/image-review.page.html
+++ b/src/app/concursos/concurso-detail/image-review/image-review.page.html
@@ -54,32 +54,56 @@
                         required
                       ></ion-input>
                     </ion-item>
-                    <ion-row class="ion-justify-content-end">
-                      <ion-col size="12">
-                        <ion-row class="ion-justify-content-end">
-                          <ion-button
-                            (click)="dismiss()"
-                            fill="clear"
-                            class="ion-margin-start"
-                          >
-                            Cancelar</ion-button
-                          >
-                          <ion-button
-                            expand="block"
-                            type="submit"
-                            class="ion-margin-start"
-                            [disabled]="!formReview.valid"
-                          >
-                            <ion-spinner
-                              *ngIf="posting"
-                              class="ion-margin-end"
-                              size="small"
-                            ></ion-spinner>
-                            Guardar
-                          </ion-button>
-                        </ion-row>
-                      </ion-col>
-                    </ion-row>
+
+
+                    
+<ion-row class="ion-justify-content-end">
+  <ion-col size="12">
+    <ion-row class="ion-justify-content-end">
+      <ion-col
+        push-sm="3"
+        size="12"
+        size-sm="3"
+        class="ion-align-self-center"
+      >
+        <ion-button
+          expand="block"
+          type="submit"
+          [disabled]="!formReview.valid"
+        >
+          <ion-spinner
+            *ngIf="posting"
+            class="ion-margin-end"
+            size="small"
+          ></ion-spinner>
+          Guardar
+        </ion-button>
+      </ion-col>
+
+      <ion-col
+        class="ion-align-self-center"
+        pull-sm="3"
+        size="12"
+        size-sm="3"
+      >
+      <!-- <ion-back-button
+      text="Cancelar"
+      icon=""
+      (click)="dismiss()"
+      [defaultHref]="backUrl"
+    ></ion-back-button
+  > -->
+      <ion-button
+      expand="block"
+      (click)="dismiss()"
+      fill="clear"
+    >
+      Cancelar</ion-button
+    >
+  </ion-col>
+    </ion-row>
+  </ion-col>
+</ion-row>
                   </form>
                 </ion-col>
               </ion-row>
