--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -1,14 +1,16 @@
-<div [ngClass]="tamWidth > 768? 'ion-page': ''">
+<div [ngClass]="tamWidth > 768 ? 'ion-page' : ''">
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
         <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
         <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
         <ion-col>
-          <h5 class="ion-text-wrap">Inscribir concursante a {{contest.name}}</h5>
+          <h5 class="ion-text-wrap">
+            Inscribir concursante a {{ contest.name }}
+          </h5>
         </ion-col>
         <ion-col size="1" class="ion-hide-md-down">
-          <ion-button (click)="dismiss()" fill="clear" class="">
+          <ion-button (click)="modalController.dismiss()" fill="clear" class="">
             <ion-icon name="close-outline"></ion-icon>
           </ion-button>
         </ion-col>
@@ -25,48 +27,68 @@
               <ion-row class="ion-padding-top">
                 <ion-item class="w-100 ion-margin-bottom">
                   <!-- [position]="(profile_id != undefined) ? 'stacked' : 'floating'" -->
-                  <ion-label
-                    position="floating"
-                  >Concursante</ion-label>
-                  <ion-select
-                    [(ngModel)]="profile_id"
-                    ngDefaultControl
-                  >
+                  <ion-label position="floating">Concursante</ion-label>
+                  <ion-select [(ngModel)]="profile_id" ngDefaultControl>
                     <!-- [(value)]="image.profile_id" -->
-                    <ion-select-option *ngFor="let p of concursantes" [value]="p.id"
-                      >{{p.name + ' ' + p.last_name}}</ion-select-option
+                    <ion-select-option
+                      *ngFor="let p of concursantes"
+                      [value]="p.id"
+                      >{{ p.name + " " + p.last_name }}</ion-select-option
                     >
                   </ion-select>
                 </ion-item>
               </ion-row>
-              <ion-row class="ion-justify-content-end">
-                <ion-col>
-                  <ion-row class="ion-justify-content-end">
-                    <ion-button
-                      (click)="modalController.dismiss()"
-                      fill="clear"
-                      class="ion-margin-start"
-                    >
-                      Cancelar</ion-button
-                    >
 
-                    <ion-button
-                      expand="block"
-                      type="submit"
-                      class="ion-margin-start"
-                      (click)="inscribirConcursante()"
-                      [disabled]="!datosCargados()"
+              <ion-row class="ion-justify-content-end">
+                <ion-col size="12">
+                  <ion-row class="ion-justify-content-end">
+                    <ion-col
+                      push-sm="3"
+                      size="12"
+                      size-sm="3"
+                      class="ion-align-self-center"
                     >
-                      <ion-spinner
-                        *ngIf="posting"
-                        class="ion-margin-end"
-                        size="small"
-                      ></ion-spinner>
-                      Guardar
-                    </ion-button>
+                      <ion-button
+                        expand="block"
+                        type="submit"
+                        (click)="inscribirConcursante()"
+                        [disabled]="!datosCargados()"
+                      >
+                        <ion-spinner
+                          *ngIf="posting"
+                          class="ion-margin-end"
+                          size="small"
+                        ></ion-spinner>
+                        Guardar
+                      </ion-button>
+                    </ion-col>
+
+                    <ion-col
+                      class="ion-align-self-center"
+                      pull-sm="3"
+                      size="12"
+                      size-sm="3"
+                    >
+                    <!-- <ion-back-button
+                    text="Cancelar"
+                    icon=""
+                    (click)="modalController.dismiss()"
+                    [defaultHref]="backUrl"
+                  ></ion-back-button
+                > -->
+                      <ion-button
+                        expand="block"
+                        (click)="modalController.dismiss()"
+                        fill="clear"
+                      >
+                        Cancelar</ion-button
+                      >
+                    </ion-col>
                   </ion-row>
                 </ion-col>
               </ion-row>
+
+
             </ion-col>
           </ion-row>
         </ion-col>
