--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -179,7 +179,9 @@
               <ion-item>No se encontraron concursos</ion-item>
             </ng-template>
             <ng-template #spinner>
-              <ion-spinner></ion-spinner> 
+              <ion-row class="ion-justify-content-center">
+                <ion-spinner ></ion-spinner>
+              </ion-row>
             </ng-template>
           </ion-col>
         </ion-row>
