--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -151,7 +151,6 @@
                 </ion-col>
               </ion-item> -->
             </ion-row>
-
             <ion-row class="ion-justify-content-end">
               <ion-col size="12">
                 <ion-row class="ion-justify-content-end">
@@ -160,32 +159,37 @@
                     size="12"
                     size-sm="3"
                     class="ion-align-self-center"
-                    ><ion-button
+                  >
+                    <ion-button
+                      expand="block"
                       type="submit"
                       [disabled]="!f.valid"
                     >
-                    <!-- expand="block" -->
-                        <ion-spinner *ngIf="posting" class="ion-margin-end" size="small"></ion-spinner>
-                        Guardar
-                      </ion-button
-                    ></ion-col
-                  >
-
+                      <ion-spinner
+                        *ngIf="posting"
+                        class="ion-margin-end"
+                        size="small"
+                      ></ion-spinner>
+                      Guardar
+                    </ion-button>
+                  </ion-col>
+            
                   <ion-col
                     class="ion-align-self-center"
                     pull-sm="3"
                     size="12"
                     size-sm="3"
                   >
-                    <ion-back-button
-                      text="Cancelar"
-                      icon=""
-                      defaultHref="/usuarios"
-                    ></ion-back-button
-                  ></ion-col>
+                  <ion-back-button
+                                  text="Cancelar"
+                                  icon=""
+                                  defaultHref="/usuarios"
+                                ></ion-back-button
+                              ></ion-col>
                 </ion-row>
               </ion-col>
             </ion-row>
+            
           </form>
         </ion-row>
       </ion-col>
@@ -194,5 +198,7 @@
 </ion-content>
 
 <ng-template #spinner>
-  <ion-spinner></ion-spinner> 
+  <ion-row class="ion-justify-content-center">
+    <ion-spinner ></ion-spinner>
+  </ion-row>
 </ng-template>
